# app

./: .env  .pylintrc  Dockerfile  README.md  app.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: code_quality.yml  release.yml
src/: App.tsx  index.html
src/components/pages/: AnalyzeTool.tsx  Home.tsx
src/components/structure/: Header.tsx  SearchBar.tsx
src/css/: App.css  Header.css
static/: index.css  logic.js
templates/: index.html
