[tool.poetry]
name = "app"
version = "1.2.0"
description = "Frontend web application that is able to bring together all the other components of the project. It is able to receive a text input from the user and return the sentiment analysis of the text using the model-service, which uses a versioned model from model-training. Note, the model-service must be running in order for app to work (i.e. not only serve as static frontend)."
authors = ["Philippe de Bekker, Hans Dekker, Luuk van Campen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
Flask = "2.2.5"
flask_cors = "3.0.10"
requests = "^2.31.0"
lib_remla19 = "*"

[tool.poetry.group.dev.dependencies]
pylint = "^2.11.2"
dslinter = "^2.0.9"
black = "^23.3.0"
bandit = "^1.7.5"
isort = "^5.12.0"


[[tool.poetry.source]]
name = "test.pypi"
url = "https://test.pypi.org/simple/"
priority = "primary"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
